# chunk

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: cmake.yml
src/: downloader.cpp  downloader.h  http.hpp  main.cpp  socket.cpp  socket.h
tests/: CMakeLists.txt
tests/src/: smoke.cpp
